# audio-flow-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  index.html  package-lock.json  package.json
specs/: 0002-design.md  0003-implementation-plan.md  instructions.md
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  state.rs
src-tauri/src/events/: mod.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/audio/: capture.rs  mod.rs  resampler.rs  vad.rs
src-tauri/src/modules/config/: manager.rs  mod.rs  secure_storage.rs
src-tauri/src/modules/events/: mod.rs
src-tauri/src/modules/input/: clipboard.rs  keyboard.rs  mod.rs  window.rs
src-tauri/src/modules/lifecycle/: mod.rs
src-tauri/src/modules/network/: mod.rs  scribe_client.rs  websocket.rs
src-tauri/src/modules/notification/: mod.rs
src-tauri/src/modules/shortcut/: manager.rs  mod.rs
src-tauri/src/modules/tray/: mod.rs
src-tauri/src/modules/window/: mod.rs
