[workspace]
members = ["src-tauri", "app-core"]
resolver = "3"

[workspace.dependencies]
# Core
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1" }

# Async runtime
tokio-tungstenite = { version = "0.28" }
futures-util = "0.3"

# Data structures
crossbeam = "0.8"
dashmap = "6"
arc-swap = "1"
parking_lot = "0.12"

# Audio
cpal = "0.17"
rubato = "0.16"

# Utilities
base64 = "0.22"
dirs = "5"
lazy_static = "1.5"
regex = "1"

# Security
ring = "0.17"
rcgen = "0.13"

app-core = { path = "app-core" }
