[package]
name = "audio-flow-core"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "audio_flow_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Workspace dependencies
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
crossbeam = { workspace = true }
dashmap = { workspace = true }
arc-swap = { workspace = true }
parking_lot = { workspace = true }
cpal = { workspace = true }
rubato = { workspace = true }
base64 = { workspace = true }
dirs = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
ring = { workspace = true }
rcgen = { workspace = true }
http = "1.0"
toml = "0.8"
active-win-pos-rs = "0.9"
enigo = "0.3"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
app-core = { workspace = true }
auto_impl = "1"

# Tauri core
tauri = { version = "2", features = [
    "tray-icon",
    "image-png",
] }
tauri-plugin-global-shortcut = "2.1"
tauri-plugin-clipboard-manager = "2.1"
tauri-plugin-dialog = "2.1"
tauri-plugin-fs = "2.1"
tauri-plugin-shell = "2.1"
tauri-plugin-notification = "2.1"
tauri-plugin-log = { version = "2", features = ["tracing"] }
tauri-plugin-window-state = "2"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
